tests/paczka2/big_fuzzy/79466900.err
Error in line 1: yEs4tTuYPe2 S100 59,4
Error in line 23: S666 A12 200,9
Error in line 31: Ll05PNtQff A12 32,3
Error in line 36: S666 A208 14,5
Error in line 42: xumQ S100 16,7
Error in line 46: yEs4tTuYPe2 A208 53,0
Error in line 60: QJGVNwL3tQ A12 42,6
Error in line 65: Ll05PNtQff A12 2,4
Error in line 64: QJGVNwL3tQ S666 43,8
Error in line 86: S666 S100 52,4
Error in line 89: Ll05PNtQff A208 28,2
Error in line 101: Ll05PNtQff A208 83,7
Error in line 114: xumQ A12 36,26
Error in line 109: xumQ A208 29,9
Error in line 122: AXogLbVD16 A12 -1,5
Error in line 117: AXogLbVD16 A12 13,7
Error in line 133: yEs4tTuYPe2 S100 95,9
Error in line 142: yEs4tTuYPe2 A208 34,4
Error in line 152: yEs4tTuYPe2 S100 16,8
Error in line 144: xumQ S100 236,2
Error in line 166: QJGVNwL3tQ S666 93,2
Error in line 182: AXogLbVD16 A12 246,7
Error in line 198: Ht9fqjWVgwl A12 58,9
Error in line 186: xumQ A12 7,8
Error in line 211: AXogLbVD16 A12 32,4
Error in line 210: xumQ S100 5,0
Error in line 217: QJGVNwL3tQ S666 88,6
Error in line 216: Ll05PNtQff A12 93,4
Error in line 203: S666 S666 61,8
Error in line 220: Ll05PNtQff S100 52,1
Error in line 219: QJGVNwL3tQ A208 29,2
